# gen_rfl

./: .gen_rfl.yaml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.中文.md  a.sh  build.sh  gen_rfl.yaml  main.cpp  reflect.def.h  reflect.h  reflect2.cpp  reflectset.h
example/: main.cpp  node.h
examples/: .gen_rfl.yaml  .gitignore  CMakeLists.txt  build.sh  config.yaml  gen_rfl.yaml  main.cpp  node.cpp  node.h
examples/base/: common.h
examples/gen_rfl/: base_types.cpp  base_types.h  rfl.h
examples/gen_rfl/base/common_rfl/: common.cpp  common.h  common.hpp
examples/gen_rfl/node.h/: base.cpp  base.h  node.cpp  node.h
examples/gen_rfl/node_rfl/: base.cpp  base.h  base.hpp  config.cpp  config.h  config.hpp  func.cpp  func.h  func.hpp  node.cpp  node.h  node.hpp  options.cpp  options.h  options.hpp  priv_opts.cpp  priv_opts.h  priv_opts.hpp
performance/: CMakeLists.txt  gen_rfl.yaml  node.cpp  node.h  performance_test.cpp
performance/gen_rfl/: base_types.cpp  base_types.h  rfl.h
performance/gen_rfl/node_rfl/: node.cpp  node.h  node.hpp
src/: .gitignore  CMakeLists.txt  Dockerfile  analyzer.cpp  analyzer.h  analyzer_test.cpp  arguments.h  branch.cpp  branch.h  branch_string.h  branch_string_test.cpp  branch_test.cpp  config.cpp  config.h  config_src.h  docker.sh  filter.cpp  filter.h  format_tpl.cpp  format_tpl.h  format_tpl_test.cpp  gen_rfl.cpp  gen_rfl.h  invoke.h  item.h  license.cpp  license.h  main.cpp  reflect.h  reflect_def.h  set.h  set_value.h  set_variant.h  setter.h  sys.cpp  sys.h  sys_test.cpp  travel_src.cpp  travel_src.h  travel_src_test.cpp  (+1 more)
src/tpl/: base_types.cpp  base_types.tpl  base_types_source.tpl  func.tpl  func.tpl.cpp  func_leaf.tpl.cpp  func_root.tpl.cpp  get_meta.tpl  get_meta.tpl.cpp  header.hpp.tpl  header.tpl  header.tpl.cpp  invoke.tpl  invoke.tpl.cpp  invoke_field.tpl  invoke_layer.tpl  license.cpp  lincense.cpp  makefile.tpl.cpp  meta.tpl  meta.tpl.cpp  rfl.tpl  rfl.tpl.cpp  tpl.h
